# release-demo

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
