[tool.pdm]

[project]
name = "demoapp"
version = "0.1.0"
description = "This is a simple demo app."
authors = [{ name = "Ales Raszka", email = "araszka@redhat.com" }]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE.txt" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/Allda/release-demo"
"Bug Tracker" = "https://github.com/Allda/release-demo/issues"


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
